# reusable-bf

./: .gitignore  README.md  bf-reusable.opam  dune-project  reusable-bf.opam
_demo/: echo.bfr  hygienic.bfr  prohibited_shift.bfr  rec.bfr  rev.bfr  rev2.bfr  rev3.bfr
demo/: bfi.bfr  echo.bfr  hygienic.bfr  prime.bfr  prime2.bfr  prohibited_shift.bfr  rec.bfr  rev.bfr  rev2.bfr  rev3.bfr  sort.bfr  str.bfr  switch.bfr  switch2.bfr
examples/: addsubmul.bfml  addsubmul.bfr  bfi.bfml  bfi.bfr  dune  fizzbuzz.bfml  fizzbuzz.bfr  geti.bfml  geti.bfr  hello.bfml  hello.bfr  hello2.bfml  hello2.bfr
examples/lib/: __misc__.bfml  _misc.bfml  counter.bfml  counter.bfr  fixedint.bfml  fixedint.bfr  future.bfml  std.bfml  std.bfr
lib/: bf.ml  dune  lexer.mll  named.ml  parser.mly  reusable.ml  support.ml  support.mli  syntax.ml
lib/bf/: code.ml  dune  exe.ml
lib/ir/: dune  (+13 more)
sample/: bfi.bfr  bfi_lib.bfr  dune  echo.bfr  fizzbuzz.bfr  hello.bfr  hello2.bfr  hygienic.bfr  import_a.bfr  import_b.bfr  import_c.bfr  letfun.bfr  lib.bfr  prime.bfr  prohibited_shift.bfr  rev2.bfr  rev3.bfr  sort.bfr  str.bfr  switch.bfr  switch_nat.bfr
sample_error/: eval_equal.bfr  eval_match.bfr  eval_module_var1.bfr  eval_selindex_child2.bfr  eval_selindex_parent1.bfr  eval_selindex_parent2.bfr  eval_var.bfr  gen_dive2.bfr  gen_if.bfr  gen_shift.bfr  import_rec.bfr  lex.bfr  lex_str.bfr  parse.bfr  value_block.bfr  value_bool.bfr  value_int.bfr  value_pair.bfr  value_sel.bfr  value_sel_nindex.bfr
test/: bfTest.ml  dune  namedTest.ml  reusableTest.ml  test.ml
test_lib/: reusableCases.ml
(+422 files in other folders)
